--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -7,20 +7,21 @@
   <meta name="Generator" content="Cocoa HTML Writer">
   <meta name="CocoaVersion" content="2575.4">
   <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; -webkit-text-stroke: #000000; min-height: 14.0px}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; -webkit-text-stroke: #000000}
+    span.s1 {font-kerning: none}
   </style>
 </head>
 <body>
-<p class="p1"><br></p>
-<p class="p2">{% if latest_question_list %}</p>
-<p class="p2"><span class="Apple-converted-space">    </span>&lt;ul&gt;</p>
-<p class="p2"><span class="Apple-converted-space">    </span>{% for question in latest_question_list %}</p>
-<p class="p2"><span class="Apple-converted-space">        </span>&lt;li&gt;&lt;a href="/polls/{{ question.id }}/"&gt;{{ question.question_text }}&lt;/a&gt;&lt;/li&gt;</p>
-<p class="p2"><span class="Apple-converted-space">    </span>{% endfor %}</p>
-<p class="p2"><span class="Apple-converted-space">    </span>&lt;/ul&gt;</p>
-<p class="p2">{% else %}</p>
-<p class="p2"><span class="Apple-converted-space">    </span>&lt;p&gt;No polls are available.&lt;/p&gt;</p>
-<p class="p2">{% endif %}</p>
+<p class="p1"><span class="s1"></span><br></p>
+<p class="p2"><span class="s1">{% if latest_question_list %}</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>&lt;ul&gt;</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>{% for question in latest_question_list %}</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">        </span>&lt;li&gt;&lt;a href="{% url 'polls:detail' question.id %}"&gt;{{ question.question_text }}&lt;/a&gt;&lt;/li&gt;</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>{% endfor %}</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>&lt;/ul&gt;</span></p>
+<p class="p2"><span class="s1">{% else %}</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>&lt;p&gt;No polls are available.&lt;/p&gt;</span></p>
+<p class="p2"><span class="s1">{% endif %}</span></p>
 </body>
 </html>
